Archive2/03/24a0bd9cc9e437/output
In file included from main.cpp:1:
In file included from /usr/local/include/boost/variant.hpp:17:
/usr/local/include/boost/variant/variant.hpp:1048:16: error: no matching function for call to object of type 'const Print'
        return visitor_(operand);
               ^~~~~~~~
/usr/local/include/boost/variant/detail/visitation_impl.hpp:128:20: note: in instantiation of function template specialization 'boost::detail::variant::invoke_visitor<const Print>::internal_visit<Desktop>' requested here
    return visitor.internal_visit(
                   ^
/usr/local/include/boost/variant/detail/visitation_impl.hpp:170:13: note: in instantiation of function template specialization 'boost::detail::variant::visitation_impl_invoke_impl<boost::detail::variant::invoke_visitor<const Print>, void *, Desktop>' requested here
    return (visitation_impl_invoke_impl)(
            ^
/usr/local/include/boost/variant/detail/visitation_impl.hpp:258:11: note: in instantiation of function template specialization 'boost::detail::variant::visitation_impl_invoke<boost::detail::variant::invoke_visitor<const Print>, void *, Desktop, boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::has_fallback_type_>' requested here
        , BOOST_VARIANT_AUX_APPLY_VISITOR_STEP_CASE
          ^
/usr/local/include/boost/preprocessor/repetition/repeat.hpp:38:60: note: expanded from macro 'BOOST_PP_REPEAT_1'
# define BOOST_PP_REPEAT_1(c, m, d) BOOST_PP_REPEAT_1_I(c, m, d)
                                                           ^
/usr/local/include/boost/preprocessor/repetition/repeat.hpp:43:63: note: expanded from macro 'BOOST_PP_REPEAT_1_I'
# define BOOST_PP_REPEAT_1_I(c, m, d) BOOST_PP_REPEAT_1_ ## c(m, d)
                                                              ^
/usr/local/include/boost/preprocessor/repetition/repeat.hpp:71:58: note: expanded from macro 'BOOST_PP_REPEAT_1_20'
# define BOOST_PP_REPEAT_1_20(m, d) BOOST_PP_REPEAT_1_19(m, d) m(2, 19, d)
                                                         ^
note: (skipping 15 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
/usr/local/include/boost/preprocessor/repetition/repeat.hpp:55:56: note: expanded from macro 'BOOST_PP_REPEAT_1_4'
# define BOOST_PP_REPEAT_1_4(m, d) BOOST_PP_REPEAT_1_3(m, d) m(2, 3, d)
                                                       ^
/usr/local/include/boost/preprocessor/repetition/repeat.hpp:54:62: note: expanded from macro 'BOOST_PP_REPEAT_1_3'
# define BOOST_PP_REPEAT_1_3(m, d) BOOST_PP_REPEAT_1_2(m, d) m(2, 2, d)
                                                             ^
/usr/local/include/boost/variant/detail/visitation_impl.hpp:249:17: note: expanded from macro 'BOOST_VARIANT_AUX_APPLY_VISITOR_STEP_CASE'
        return (visitation_impl_invoke)( \
                ^
/usr/local/include/boost/variant/variant.hpp:2362:33: note: in instantiation of function template specialization 'boost::detail::variant::visitation_impl<mpl_::int_<0>, boost::detail::variant::visitation_impl_step<boost::mpl::l_iter<boost::mpl::l_item<mpl_::long_<3>, Cellphone, boost::mpl::l_item<mpl_::long_<2>, Laptop, boost::mpl::l_item<mpl_::long_<1>, Desktop, boost::mpl::l_end> > > >, boost::mpl::l_iter<boost::mpl::l_end> >, boost::detail::variant::invoke_visitor<const Print>, void *, boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::has_fallback_type_>' requested here
        return detail::variant::visitation_impl(
                                ^
/usr/local/include/boost/variant/variant.hpp:2376:16: note: in instantiation of function template specialization 'boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::internal_apply_visitor_impl<boost::detail::variant::invoke_visitor<const Print>, void *>' requested here
        return internal_apply_visitor_impl(
               ^
/usr/local/include/boost/variant/variant.hpp:2401:22: note: in instantiation of function template specialization 'boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::internal_apply_visitor<boost::detail::variant::invoke_visitor<const Print> >' requested here
        return this->internal_apply_visitor(invoker);
                     ^
/usr/local/include/boost/variant/detail/apply_visitor_unary.hpp:76:22: note: in instantiation of function template specialization 'boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::apply_visitor<const Print>' requested here
    return visitable.apply_visitor(visitor);
                     ^
main.cpp:33:5: note: in instantiation of function template specialization 'boost::apply_visitor<Print, boost::variant<Cellphone, Laptop, Desktop, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_> >' requested here
    apply_visitor(Print(), x);
    ^
main.cpp:17:10: note: candidate function not viable: no known conversion from 'Desktop' to 'const Cellphone' for 1st argument
    void operator()(const Cellphone &x) const
         ^
main.cpp:21:10: note: candidate function not viable: no known conversion from 'Desktop' to 'const Laptop' for 1st argument
    void operator()(const Laptop &x) const
         ^
1 error generated.
